5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4001/executions/1590_1015.log
== TEST (2019-03-21 20:49:23) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var = int(input("Tres valores")
print(min(var))
print(max(var))
			 

-- ERROR:
File "XXXX", line 5
    print(min(var))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:49:53) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var = int(input("Tres valores")
min(var)
max(var)
			 

-- ERROR:
File "XXXX", line 5
    min(var)
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 21:01:30) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x = input(int("Numero:")
y = input(int("Numero:")
z = input(int("Numero:")
print(min(x,y,z))	
print((x + y + z)- (min + max))			 
print(max(x,y,z))			 
		  
			 
			 

-- EXECUTION TIME:
0.221295
-- ERROR:
  File "/home/codebench/codes/1590/1015/main.py", line 5
    y = input(int("Numero:")
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 21:01:36) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x = input(int("Numero:")
y = input(int("Numero:")
z = input(int("Numero:")
print(min(x,y,z))	
print((x + y + z)- (min + max))			 
print(max(x,y,z))			 
		  
			 
			 

-- ERROR:
File "XXXX", line 5
    y = input(int("Numero:")
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 21:03:04) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x = float(input(int("Numero:")))
y = float(input(int("Numero:")))
z = float(input(int("Numero:")))
print(min(x,y,z))	
print((x + y + z)- (min + max))			 
print(max(x,y,z))			 
		  
			 
			 

-- EXECUTION TIME:
0.135303
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1015/main.py", line 4, in <module>
    x = float(input(int("Numero:")))
ValueError: invalid literal for int() with base 10: 'Numero:'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 21:03:10) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x = float(input(int("Numero:")))
y = float(input(int("Numero:")))
z = float(input(int("Numero:")))
print(min(x,y,z))	
print((x + y + z)- (min + max))			 
print(max(x,y,z))			 
		  
			 
			 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    x = float(input(int("Numero:")))
ValueError: invalid literal for int() with base 10: 'Numero:'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 21:08:09) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x = float(input("Numero:"))
y = float(input("Numero:"))
z = float(input("Numero:"))
var1 = min(x,y,z)
var2 = (x + y + z)- (min + max)
var3 = max(x,y,z)
print(var1)	
print(var2)			 
print(var3)			 
		  
			 
			 

-- EXECUTION TIME:
0.153535
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1015/main.py", line 8, in <module>
    var2 = (x + y + z)- (min + max)
TypeError: unsupported operand type(s) for +: 'builtin_function_or_method' and 'builtin_function_or_method'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 21:08:52) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x = float(input("Numero:"))
y = float(input("Numero:"))
z = float(input("Numero:"))
var1 = min(x,y,z)
var2 = (x + y + z)- (min + max)
var3 = max(x,y,z)
print(var1)	
print(var2)			 
print(var3)			 
		  
			 
			 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    var2 = (x + y + z)- (min + max)
TypeError: unsupported operand type(s) for +: 'builtin_function_or_method' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 21:09:36) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x = float(input("Numero:"))
y = float(input("Numero:"))
z = float(input("Numero:"))
var1 = min(x,y,z)
var2 = (x + y + z)- (var1 + var3)
var3 = max(x,y,z)
print(var1)	
print(var2)			 
print(var3)			 
		  
			 
			 

-- EXECUTION TIME:
0.134427
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1015/main.py", line 8, in <module>
    var2 = (x + y + z)- (var1 + var3)
NameError: name 'var3' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 21:09:39) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x = float(input("Numero:"))
y = float(input("Numero:"))
z = float(input("Numero:"))
var1 = min(x,y,z)
var2 = (x + y + z)- (var1 + var3)
var3 = max(x,y,z)
print(var1)	
print(var2)			 
print(var3)			 
		  
			 
			 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    var2 = (x + y + z)- (var1 + var3)
NameError: name 'var3' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 21:13:02) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x = float(input("Numero:"))
y = float(input("Numero:"))
z = float(input("Numero:"))
var1 = (x + y + z)
var2 = min(x,y,z)
var3 = var - (var1 + var3)
var4 = max(x,y,z)
print(var1)	
print(var2)			 
print(var3)			 
		  
			 
			 

-- EXECUTION TIME:
0.136283
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1015/main.py", line 9, in <module>
    var3 = var - (var1 + var3)
NameError: name 'var' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 21:13:28) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x = float(input("Numero:"))
y = float(input("Numero:"))
z = float(input("Numero:"))
var1 = (x + y + z)
var2 = min(x,y,z)
var3 = var - (var1 + var3)
var4 = max(x,y,z)
print(var1)	
print(var2)			 
print(var3)			 
		  
			 
			 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    var3 = var - (var1 + var3)
NameError: name 'var' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 21:14:03) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x = float(input("Numero:"))
y = float(input("Numero:"))
z = float(input("Numero:"))
var1 = (x + y + z)
var2 = min(x,y,z)
var3 = var1 - (var1 + var4)
var4 = max(x,y,z)
print(var1)	
print(var2)			 
print(var3)			 
		  
			 
			 

-- EXECUTION TIME:
0.185113
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1015/main.py", line 9, in <module>
    var3 = var1 - (var1 + var4)
NameError: name 'var4' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 21:14:10) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x = float(input("Numero:"))
y = float(input("Numero:"))
z = float(input("Numero:"))
var1 = (x + y + z)
var2 = min(x,y,z)
var3 = var1 - (var1 + var4)
var4 = max(x,y,z)
print(var1)	
print(var2)			 
print(var3)			 
		  
			 
			 

-- EXECUTION TIME:
0.189524
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1015/main.py", line 9, in <module>
    var3 = var1 - (var1 + var4)
NameError: name 'var4' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 21:14:12) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x = float(input("Numero:"))
y = float(input("Numero:"))
z = float(input("Numero:"))
var1 = (x + y + z)
var2 = min(x,y,z)
var3 = var1 - (var1 + var4)
var4 = max(x,y,z)
print(var1)	
print(var2)			 
print(var3)			 
		  
			 
			 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    var3 = var1 - (var1 + var4)
NameError: name 'var4' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 21:14:42) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x = float(input("Numero:"))
y = float(input("Numero:"))
z = float(input("Numero:"))
var1 = (x + y + z)
var2 = min(x,y,z)
var3 = var1 - (var1 + var4)
var4 = max(x,y,z)
print(var2)	
print(var3)			 
print(var4)			 
		  
			 
			 

-- EXECUTION TIME:
0.141212
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1015/main.py", line 9, in <module>
    var3 = var1 - (var1 + var4)
NameError: name 'var4' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 21:14:57) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x = float(input("Numero:"))
y = float(input("Numero:"))
z = float(input("Numero:"))
var1 = (x + y + z)
var2 = min(x,y,z)
var3 = var1 - (var1 + var4)
var4 = max(x,y,z)
print(var2)	
print(var3)			 
print(var4)			 
		  
			 
			 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    var3 = var1 - (var1 + var4)
NameError: name 'var4' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 21:17:15) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x = float(input("Numero:"))
y = float(input("Numero:"))
z = float(input("Numero:"))
var1 = (x + y + z)
var2 = (min(x,y,z))
var3 = (var1 - (var1 + var4))
var4 = (max(x,y,z))
print(var2)	
print(var3)			 
print(var4)			 
		  
			 
			 

-- EXECUTION TIME:
0.135454
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1015/main.py", line 9, in <module>
    var3 = (var1 - (var1 + var4))
NameError: name 'var4' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 21:17:55) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x = float(input("Numero:"))
y = float(input("Numero:"))
z = float(input("Numero:"))
var1 = (x + y + z)
var2 = (min(x,y,z))
var3 = ((var1) - (var1 + var4))
var4 = (max(x,y,z))
print(var2)	
print(var3)			 
print(var4)			 
		  
			 
			 

-- EXECUTION TIME:
0.128751
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1015/main.py", line 9, in <module>
    var3 = ((var1) - (var1 + var4))
NameError: name 'var4' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 21:20:26) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x = float(input("Numero:"))
y = float(input("Numero:"))
z = float(input("Numero:"))
A = (max(x,y,z))
B = (min(x,y,z))
a = ((x + y + z) - (A + B)
print(B)
print(a)
print(A)			 
			 

-- EXECUTION TIME:
0.141014
-- ERROR:
  File "/home/codebench/codes/1590/1015/main.py", line 10
    print(B)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 21:20:53) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x = float(input("Numero:"))
y = float(input("Numero:"))
z = float(input("Numero:"))
A = (max(x,y,z))
B = (min(x,y,z))
a = ((x + y + z) - (A + B)
print(int(B))
print(int(a))
print(int(A))			 
			 

-- EXECUTION TIME:
0.139544
-- ERROR:
  File "/home/codebench/codes/1590/1015/main.py", line 10
    print(int(B))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 21:21:27) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x = int(input("Numero:"))
y = int(input("Numero:"))
z = int(input("Numero:"))
A = (max(x,y,z))
B = (min(x,y,z))
a = ((x + y + z) - (A + B)
print(B)
print(a)
print(A)			 
			 

-- EXECUTION TIME:
0.139252
-- ERROR:
  File "/home/codebench/codes/1590/1015/main.py", line 10
    print(B)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 21:22:01) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x = float(int(input("Numero:")))
y = float(int(input("Numero:")))
z = float(int(input("Numero:")))
A = (max(x,y,z))
B = (min(x,y,z))
a = ((x + y + z) - (A + B)
print(B)
print(a)
print(A)			 
			 

-- EXECUTION TIME:
0.149784
-- ERROR:
  File "/home/codebench/codes/1590/1015/main.py", line 10
    print(B)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 21:22:36) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x = int(input())
y = int(input())
z = int(input())
A = (max(x,y,z))
B = (min(x,y,z))
a = ((x + y + z) - (A + B)
print(B)
print(a)
print(A)			 
			 

-- EXECUTION TIME:
0.165461
-- ERROR:
  File "/home/codebench/codes/1590/1015/main.py", line 10
    print(B)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 21:23:07) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x = int(input())
y = int(input())
z = int(input())
A = (max(x,y,z))
B = (min(x,y,z))
a = ((x + y + z) - (A + B)
print(B)
print(a)
print(A)			 
			 

-- ERROR:
File "XXXX", line 10
    print(B)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 21:23:45) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x = int(input())
y = int(input())
z = int(input())
A = (max(x,y,z))
B = (min(x,y,z))
a = ((x + y + z) - (A + B)
print(B)
print(a)
print(A)			 
			 

-- ERROR:
File "XXXX", line 10
    print(B)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 21:24:31) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x = int(input())
y = int(input())
z = int(input())
A = (max(x,y,z))
B = (min(x,y,z))
a = ((x + y + z) - (A + B)
print(B)
print(a)
print(A)			 
			 

-- ERROR:
File "XXXX", line 10
    print(B)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 21:24:38) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x = int(input())
y = int(input())
z = int(input())
A = (max(x,y,z))
B = (min(x,y,z))
a = ((x + y + z) - (A + B)
print(B)
print(a)
print(A)			 
			 

-- EXECUTION TIME:
0.17012
-- ERROR:
  File "/home/codebench/codes/1590/1015/main.py", line 10
    print(B)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 21:24:43) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x = int(input())
y = int(input())
z = int(input())
A = (max(x,y,z))
B = (min(x,y,z))
a = ((x + y + z) - (A + B)
print(B)
print(a)
print(A)			 
			 

-- EXECUTION TIME:
0.170601
-- ERROR:
  File "/home/codebench/codes/1590/1015/main.py", line 10
    print(B)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 21:26:12) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x = int(input())
y = int(input())
z = int(input())
A = (max(x,y,z))
B = (min(x,y,z))
a = ((x + y + z) - (A + B))
print(B)
print(a)
print(A)			 
			 

-- EXECUTION TIME:
0.138885
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
0
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 21:20:55) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x = int(input())
y = int(input())
z = int(input())
A = (max(x,y,z))
B = (min(x,y,z))
a = ((x + y + z) - (A + B))
print(B)
print(a)
print(A)			 
			 

-- EXECUTION TIME:
0.186641
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
0
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
